Bug 12123 - Fix ctdb tickle command and update documentation
Summary: Fix ctdb tickle command and update documentation
Status: RESOLVED FIXED
Alias: None
Product: CTDB 2.5.x or older
Classification: Unclassified
Component: ctdb (show other bugs)
Version: 4.5.0rc
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-07 07:11 UTC by Amitay Isaacs
Modified: 2016-08-11 08:36 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.5rc (3.38 KB, patch)
2016-08-09 03:24 UTC, Martin Schwenke
amitay: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Amitay Isaacs 2016-08-07 07:11:17 UTC
ctdb tickle command can be run without daemon.
Comment 1 Martin Schwenke 2016-08-09 03:24:12 UTC
Created attachment 12335 [details]
Patch for 4.5rc
Comment 2 Amitay Isaacs 2016-08-09 04:43:18 UTC
Hi Karolin,

Here are patches for v4-5.
Comment 3 Karolin Seeger 2016-08-09 08:10:23 UTC
(In reply to Amitay Isaacs from comment #2)
Pushed to autobuild-v4-5-test.
Comment 4 Karolin Seeger 2016-08-11 08:36:06 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to v4-5-test.
Closing out bug report.

Thanks!