ctdb-tools: "ctdb tickle" command should run without daemon

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12123

Signed-off-by: Martin Schwenke <martin@meltin.net>
Reviewed-by: Amitay Isaacs <amitay@gmail.com>